# zabbix_dbmon

./: .gitignore  BUILD_DBMON.ru.md  BUILD_DBMON_ORACLE.ru.md  ChangeLog  HOWTO_START_DBMON.md  HOWTO_START_DBMON.ru.md  Makefile.am  README.md  README.ru.md  RHELINSTALL.ru.md  UBUNTUINSTALL.ru.md  build-backend.xml  build.zabbix.dbmon.runner.mysql.x64.cmd  build.zabbix.dbmon.runner.x64.cmd  build.zabbix.dbmon.runner.x86.cmd  build.zabbix.dbmon.x64.cmd  build.zabbix.dbmon.x86.cmd  build.zabbix.x64.cmd  build.zabbix.x86.cmd  clean.zabbix.dbmon.x64.cmd  clean.zabbix.dbmon.x86.cmd  configure.ac  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: c-cpp.yml  coverity.yml  everyone.yml  linux.yml  linux_mysql.yml  linux_oracle.yml  linux_pgsql.yml  linux_test.bak  linux_test.yml  prerelease.yml  release.yml  remove.yml  rhel_pkg.yml  rockylinux_pkg.yml  sonarcloud-C.yml  sonarcloud-PHP.yml  sonarcloud-others.yml  sonarcloud.yml  (+14 more)
conf/: zabbix_agentd.dbmon.conf  zabbix_agentd_dbmon.conf  zabbix_agentd_dbmon.sql.conf  zabbix_agentd_dbmon.win.conf  zabbix_agentd_dbmon_sql.conf  zabbix_proxy.conf  zabbix_server.conf
include/: cfg.h  common.h  db.h  sysinfo.h  version.h  version.h.orig  version.h.win  zbxdbmon.h
m4/: libconfig.m4
man/: Makefile.am  zabbix_agentd_dbmon.man
src/libs/zbxdbmon/: Makefile.am  dbmon.c  dbmon_mysql.c  dbmon_oracle.c  dbmon_pgsql.c  strptime.c  strptime.h
src/libs/zbxsysinfo/dbmon/: Makefile.am  bsdshim.h  dbmon_common.c  dbmon_common.h  dbmon_config.c  dbmon_config.h  dbmon_params.c  dbmon_params.h  gmtime_r.c  mysql_info.c  mysql_info.h  oracle_info.c  oracle_info.h  pgsql_info.c  pgsql_info.h  strptime.c  strptime.h  timelocal.c  timelocal.h
vs2017/: resource.h  zabbix.props  zabbix.sln
(+328 files in other folders)
